# OpenSeesProjects

./: .gitignore
DRM/2D/: H5DRM.cpp  Rayleigh_Wave_Test.m  carga_impulsiva.m  onda_de_rayleigh.m  prueba_de_onda_de_rayleigh.m  rayleigh_wave.m
DRM/OpenSeesDRMCreator/: H5DRMcreator.py  summary.ipynb
DRM/Rickerwavelet/: generate.py  model.tcl  model2.tcl  ricker.acc  ricker.dis  ricker.time  ricker.vel  summary.ipynb  wave.py
MeshGenerator/: MeshCreator.py  Partition.py  Topo.py  Topo2.py  build.bash  build.bat  building.py  clean.bat  test.py
MeshGenerator/EE-UQ/: DRMmesh.py
MeshGenerator/GKlib/: CMakeLists.txt
MeshGenerator/METIS/: CMakeLists.txt
MeshGenerator/Partitioner/: CMakeLists.txt  Partition.c  Partition_Linux.c  compile.bat
MeshGenerator/PyvistaExample/: ExtractingSurface.py  PyvistaQt.py  SurfaceSmoothing.py  Voxelizing.py  VoxelizingExample.py
MeshGenerator/Topography/: Topo.py  TopoFunc.py
PML/: PMLValidation.pptx
PML_DRM_Pile/BeamEqStruct/: BeamEQStruct.py  BeamEQStruct.tcl  PilePostprocess.py  Postprocess.py
PML_DRM_Pile/Pilewithfoundaton/: Pilewithfoundation.py  Pilewithfoundation.tcl  Postprocess.ipynb  Postprocess.py
PML_DRM_Pile/ReducedDomain/: Postprocess.py  ReducedDomain.py  ReducedDomain.tcl
PML_DRM_Pile/Structure/: Postprocess.py  Structure.py  (+1 more)
Presentations/: 3DModelSlides.pptx
Shakermaker/: shakermaker.pptx  tags.txt
Structure/: QtPy.py  model.tcl  modelCreator.py  run.bash  tmppost.py
pyVista/: meshcreator-Centrifuge.py  meshcreator.py  postprocess_Stress.py  scene-export-centrifuge.html  scene-export.html
(+250 files in other folders)
